--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			background-size: cover;
 		}
 
-		.score {
+		.board {
 			width: 100%;
 			height: 150px;
 		}
@@ -25,11 +25,9 @@
 		#game {
 			width: 100%;
 			height: 80vh;
-			border: 1px solid black;
-			background: black;
 			position: relative;
 			overflow: hidden;
-			cursor: url(./cursor.png) 50 50, auto;
+			cursor: url(./throw2.png) 100 0, auto;
 		}
 
 		#game img {
@@ -38,19 +36,16 @@
 			user-select: none;
 			-webkit-user-drag: none;
 		}
-
-		.blood {
-			/* 忽略點擊事件 */
-			pointer-events: none;
-		}
 	</style>
 </head>
 
 <body>
-	<div class="score">
+	<div class="board">
 		<input type="button" value="開始" id="btn-start">
-		<p>分數: <span id="text-score">0</span></p>
-		<p>剩餘: <span id="text-time">0</span>秒</p>
+		<div class="score">
+			<p>分數: <span id="text-score">0</span></p>
+			<p>剩餘: <span id="text-time">0</span>秒</p>
+		</div>
 		<p>最高分玩家: <span id="text-hsname">-</span></p>
 		<p>最高分分數: <span id="text-hsscore">0</span></p>
 	</div>
@@ -84,11 +79,11 @@
 		// 點擊開始
 		$('#btn-start').click(function () {
 			// 停用按鈕
-			$(this).css('display', 'none')
+			$(this).attr('disabled', true)
 			// 重設
 			score = 0
 			$('#text-score').text(score)
-			time = 10
+			time = 20
 			$('#text-time').text(time)
 			// 因為 setInterval 裡的 this 會指向 window，而不是點到的按鈕，所以先把 this 存起來
 			const _this = this
@@ -100,20 +95,20 @@
 				// 隨機 1~10
 				const random = Math.ceil(Math.random() * 10)
 				// 如果隨機數字大於 5 且魚的數量小於 5
-				if (random > 5 && $('.fish').length < 5) {
+				if (random > 5 && $('.balloon').length < 5) {
 					// 隨機位置
 					const top = Math.round(Math.random() * 100) + '%'
 					const left = Math.round(Math.random() * 100) + '%'
 					// 產生魚
-					const fish = $(`<img src="balloon.png" class="fish" style="top: ${top}; left: ${left}">`)
-					$('#game').append(fish)
-					moveFish(fish)
+					const balloon = $(`<img src="balloon.png" class="balloon" style="top: ${top}; left: ${left}">`)
+					$('#game').append(balloon)
+					moveBalloon(balloon)
 				}
 				// 如果時間到了
 				if (time === 0) {
 					clearInterval(timer)
 					// 重新啟用按鈕
-					$(_this).attr('display', 'none')
+					$(_this).attr('disabled', false)
 					// 清空遊戲區域
 					// .empty() 會把裡面的子元素都刪掉
 					$('#game').empty()
@@ -122,7 +117,7 @@
 						Swal.fire({
 							icon: 'success',
 							title: '時間到',
-							text: `最高分，你得到 ${score} 分`,
+							text: `最高分，你得到 ${score}  分`,
 							// input 的 type
 							input: 'text',
 							// input 的其他屬性
@@ -157,20 +152,20 @@
 		})
 
 		// 點擊
-		$('#game').on('click', '.fish', function () {
+		$('#game').on('click', '.balloon', function () {
 			$(this).stop()
-			$(this).attr('src', 'money.jpg')
-			$(this).removeClass('fish').addClass('blood')
+			$(this).css('display', 'none')
+			$(this).removeClass('balloon')
 			score++
 			$('#text-score').text(score)
 		})
 
-		function moveFish(fish) {
+		function moveBalloon(balloon) {
 			// 隨機位置
 			const top = Math.round(Math.random() * 100) + '%'
 			const left = Math.round(Math.random() * 100) + '%'
-			fish.animate({ top, left }, 2000, function () {
-				moveFish(fish)
+			balloon.animate({ top, left }, 2000, function () {
+				moveBalloon(balloon)
 			})
 		}
 	</script>
